--- a/q/275270.html
+++ b/q/275270.html
@@ -26,82 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td></td><td>240901T064335Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275289#275289">InShotsP</a></td></tr>
+<tr d-ix="0"><td>083</td><td>Charcoal</td><td>240901T110835Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275290#275290">Neil</a></td></tr>
 <tr d-ix="1"><td>084</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><ol>
-<li><p><strong>Understanding the Structure of an n-Simplex:</strong>
-An n-simplex is the simplest n-dimensional shape.
-The key challenge is to correctly structure the given string into this shape, where each level of the shape is represented as a nested list. Each layer alternates direction (forwards/backwards) as you move through it.</p>
-</li>
-<li><p><strong>General Approach:</strong>
-Input:
-n: Number of dimensions.
-string: The string that needs to be split.
-Optionally, the side length l can also be input to help structure the string into layers.
-Output:
-A nested list that represents the n-simplex structure with the string woven through the points in alternating directions.</p>
-</li>
-<li><p><strong>Steps to Solve:</strong>
-Base Case:
-For n=0 (0-dimensional simplex), the output is just the string itself since it represents a single point.
-Recursive Case:
-For higher dimensions, you recursively break down the string, creating lists that alternate between forwards and backwards directions.
-At each level, the number of elements to include can be determined by the combinatorial formula for an n-simplex.</p>
-</li>
-<li><p><strong>Implementation Steps:</strong>
-Calculate the Number of Points: Use the combinatorial formula C(n + l - 1, n) to find the total number of points for the given dimensions.
-Divide the String into Layers: Divide the string into sections corresponding to each layer of the simplex.
-Recursion for Nesting: Use recursion to structure the string into the nested list representation. Each recursion will handle the next dimension.
-Alternating Directions: Ensure that each layer alternates direction (forwards/backwards) as required by the problem.</p>
-</li>
-<li><p><strong>Python Code Implementation:</strong>`from math import comb</p>
-</li>
-</ol>
-<p>def build_simplex(n, l, s):
-def recursive_build(n, l, s, reverse=False):
-if n == 0:
-return s
-size = comb(n + l - 1, n)
-idx = 0
-layers = []
-for i in range(l, 0, -1):
-layer_size = comb(n + i - 2, n - 1)
-layer = recursive_build(n - 1, i, s[idx:idx + layer_size], reverse=not reverse)
-if reverse:
-layer.reverse()
-layers.append(layer)
-idx += layer_size
-return layers</p>
-<pre><code>return recursive_build(n, l, list(s))
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 83 bytes</h1>
+<pre><code>≔⪪⮌Ｓ¹θ≔ＥＮ¹ηＦＮＵＭη…η⊕λ≔⟦⟦⟧Ｘ⊟η¹⟧η⊞υ⟦⟦⟧η⟧ＦυＦＬι«≔§ικζ¿№ζ¹Ｆ⁺²κＵＭζ⎇λ§⮌ζν∧μ⊟θ⊞υ⎇﹪κ²ζ⮌ζ»⭆¹⊟η
 </code></pre>
-<h1>Example usage:</h1>
-<p>n = 3
-l = 4
-s = &quot;abcdefghijklmnopqrst&quot;
-simplex_structure = build_simplex(n, l, s)
-print(simplex_structure)
-`
-6.  <strong>Explanation of the Code:</strong>
-comb(n + l - 1, n) is used to calculate the number of points required for an n-simplex with sides of length l.
-The function recursive_build constructs the simplex recursively by dividing the string into the necessary layers, alternating the direction of each layer.
-For each layer, the string is split into smaller sections and passed recursively to the next level of the simplex.</p>
-<ol start="7">
-<li><strong>Sample Output:</strong>
-n = 3
-l = 4
-s = &quot;abcdefghijklmnopqrst&quot;</li>
-</ol>
-<p>The output will be:
-[[['a'], ['b', 'c'], ['j', 'h', 'i', 'g', 'f', 'e']], ['k', 'l', 'm', 'p', 'o', 'n'], ['q', 'r', 's', 't']]</p>
-<p>This represents a 3-dimensional simplex with layers alternating direction.</p>
-<ol start="8">
-<li><strong>Key Points:</strong>
-Recursive Nature: The solution involves recursion to handle the nested list structure.</li>
-</ol>
-<p><strong>String Traversal:</strong> The string is traversed in alternating directions (forwards/backwards) at each level.
-Mathematical Combinatorics: The formula comb(n + l - 1, n) is central to determining how many elements are in each layer.
-This approach provides a clear, structured way to build the n-simplex based on the input string.</p>
+<p><a href="https://tio.run/##VZE9b8MgEIbn@FcwHhIdkqZf6hR5itRUVtMtyuDYZ0ODwcGQD1f97S7EtqIMCKF7eN7jyHhqMp3Krls0jSgVrGspLHzhEU2DsFS1s2trhCqBUkamfh3oezTAq7TukU9X7dDAQHBPFNqQ@xolHo91VaUqB85IfMkkxlzX4bBUmcEKlcUcJKW3iM1my0iiT96QBPQase0zEtdwcIxcGb4dUx0l1/0DVWk5CJ/8G00G38IuVY5nEIzsvav1lyaiIBBrpyy0wT5cT6RrYBawu8498o1GpeYCkpFRNw6s9U7l18KTVWi8hgMN7yEoGyRjx6NhpXMnNewZmYVmGLl5wgz@osSP3kL/A2Ha097JQ7nr0l2WY1Fy8bOXldL1wTTWHU/nSzudPc6fnl9e36J5NO8ejvIf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input in reverse order from the test cases. Explanation: Too many edge cases costing me a whole 10 bytes.</p>
+<pre><code>≔⪪⮌Ｓ¹θ
+</code></pre>
+<p>Input the string and convert it into a form that can be iterated over using <code>Pop</code>.</p>
+<pre><code>≔ＥＮ¹η
+</code></pre>
+<p>Make a <code>1</code>-dimensional simplex of the input length.</p>
+<pre><code>ＦＮＵＭη…η⊕λ
+</code></pre>
+<p>Expand the simplex by the input number of dimensions. (At this point I could consider <code>0</code> dimensions to be an edge case but fortunately it doesn't cost any bytes here.)</p>
+<pre><code>≔⟦⟦⟧Ｘ⊟η¹⟧η
+</code></pre>
+<p>Extract the last layer of the expanded simplex, which results in the desired number of dimensions. Deep clone it, as the expansion works by duplicating nested lists. Finally, wrap that in a list, to handle the edge case of <code>0</code> dimensions.</p>
+<pre><code>⊞υ⟦⟦⟧η⟧Ｆυ
+</code></pre>
+<p>Start traversing the wrapped simplex, but wrap it again, to handle the edge case of <code>1</code> dimension.</p>
+<pre><code>ＦＬι«≔§ικζ
+</code></pre>
+<p>Loop over each slice of the current simplex.</p>
+<pre><code>¿№ζ¹Ｆ⁺²κＵＭζ⎇λ§⮌ζν∧μ⊟θ
+</code></pre>
+<p>If this is an edge then fill it from the input string, reversing it in place if it's an even edge (actually reversing it in place a number of times given by one more than its index; the <code>2</code> accounts for the fill operation, which it's golfier to inline as an extra loop pass).</p>
+<pre><code>⊞υ⎇﹪κ²ζ⮌ζ
+</code></pre>
+<p>Otherwise add this slice to the list of simplexes to process, reversing it if it's an even slice.</p>
+<pre><code>»⭆¹⊟η
+</code></pre>
+<p>Pretty-print the final simplex.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, <s>85</s> 84 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda s,n,l,r=1:n and[f(s,n-1,i+1,-(-1)**i)for i in range(l)[::r]][::r]or next(s)
