--- a/q/275270.html
+++ b/q/275270.html
@@ -26,10 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>083</td><td>Charcoal</td><td>240901T110835Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275290#275290">Neil</a></td></tr>
-<tr d-ix="1"><td>084</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
+<tr d-ix="0"><td>083</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
+<tr d-ix="1"><td>083</td><td>Charcoal</td><td>240901T110835Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275290#275290">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 83 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>85</s> <s>84</s> 83 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>f=lambda s,n,l,r=1:n and[f(s,n-1,i+1,i%2*2-1)for i in range(l)[::r]][::r]or next(s)
+</code></pre>
+<p>Takes the string (<code>s</code>) as an iterator of characters -- to take a <code>str</code>, replace <code>n and</code> with <code>n*[s:=iter(s)]and</code> for <s>+16</s> +12 bytes (-4 bytes by att).<br />
+Assumes <code>l</code> is nonzero -- to support the case where <code>l</code> is zero, change <code>&lt;a&gt; and&lt;b&gt;or &lt;c&gt;</code> to <code>&lt;b&gt;if &lt;a&gt; else &lt;c&gt;</code> for +2 bytes.</p>
+<p><a href="https://ato.pxeger.com/run?1=zVbJbttADD3XXzE9FLLaCVDbWQ34kLXZ910wCtuSbCWyLEvjeAnyJb3k0v5Gv6P9mlLkaDS206Roi6IBxiEf-UgORY3m05dwKFqd4PHxc0-4M4vfTtyKX2vX7RqLecB9HlUK5YDVAtty84DMFLj3Dtab4tviTMF0OxHzmBewqBY0nbxvWuVyVK3iL5gCZyDysUmhv7_6KpxYfPSCsCdiVmFWLm_UDM7ec1YweaYUdaWkK7NKKShOnTRJqjdILaWqTXrGLGbMBqmKajsuISUNaba8G0KzGCUthk16cZpSmg5067eDTtiNYkH2LOSsHtIhYDImssn088C9u_5gOCoUS7Nz8wuLS-Se5Zkby-MS8mQiikYOL6VbXlldW9_4sLm1vbO7t39weHR8cnp2fnF5dZ0UQjGyGubHa2gS9EwRMgf5JbVUczmcpU5PqGFKQk_-WPBbpX_cqOsiNxqTKjdshJCkBG6l3k9AIEELDYe4LzqABps1WrA8WDeSQgk1kVsWVmulVT1vTJAbRChymocy_yE5sd8i6gPSRikECQbRCFDrghTBimEJlU5uakzhFqXHoNQdO63xlx3R1pE2H21tqkWrVbZX7or286-SIDeUnl20U3sIGSLSB2SA0h1IPdm6xD5CtABIEaU5kOAVMkqozYO0AGsR1pK2pbTdEyq30k1SWQ2ZhIbRUX35TRr59ZRfV_pF6JcNhN4RGqEAR0jvLxyZWl-po_95aZTjTsXpSxY92CH4jZRtW9o-oG0TbFsS2UBkDZB1lFZBgrPOWFbcHem5i_Y9sO1L5BSRY0BOUDoC6RDWgbSfIXoOyAVK1yBdwbrUhiwZrWTE9GarcZoCuJU9ANmAhio0PVAcdfI1_2oYyVrRWH3FGoy9YKO0g1NPKZJ-MfoJfP0mp4ROtuSMG5-NW0CymaBpSDcIH6XkPgTXJGZ7bSeIvU4Asu8ETdEyOdO-WMmVaeSFee1CNGaPzXKOwV-tIXo1Hz5vbt4TTgR3qSdjk28cO5FQlIoejzPXcAah0xCOze41wwNnzY5g98R6MHK5MPICkTeWfR8DxCxMAtuvDTNH97j0qvgD" rel="nofollow noreferrer">Attempt This Online!</a> (does not have the final 3 test cases)</p>
+<p>Ungolfed:</p>
+<pre class="lang-python prettyprint-override"><code>def snake(src, dimensions, length, reverse=False):
+    if dimensions == 0:
+        return next(src)
+    maybe_rev = lambda seq: seq[::-1] if reverse else seq
+    return maybe_rev([snake(src, dimensions - 1, length=i+1, reverse=(i+1)%2==1)
+        for i in maybe_rev(range(length))])
+</code></pre>
+<p>Not really much to say -- just uses recursion to build the specified simplex, with characters coming from a stateful iterator. In the golfed code, instead of a boolean <code>reverse</code> parameter, we take <code>r</code>: 1 for forwards, -1 for backwards. With that change, <code>maybe_rev</code> simply becomes <code>lambda seq: seq[::r]</code>, and we use powers of -1 to express alternating directions.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 83 bytes</h1>
 <pre><code>≔⪪⮌Ｓ¹θ≔ＥＮ¹ηＦＮＵＭη…η⊕λ≔⟦⟦⟧Ｘ⊟η¹⟧η⊞υ⟦⟦⟧η⟧ＦυＦＬι«≔§ικζ¿№ζ¹Ｆ⁺²κＵＭζ⎇λ§⮌ζν∧μ⊟θ⊞υ⎇﹪κ²ζ⮌ζ»⭆¹⊟η
 </code></pre>
 <p><a href="https://tio.run/##VZE9b8MgEIbn@FcwHhIdkqZf6hR5itRUVtMtyuDYZ0ODwcGQD1f97S7EtqIMCKF7eN7jyHhqMp3Krls0jSgVrGspLHzhEU2DsFS1s2trhCqBUkamfh3oezTAq7TukU9X7dDAQHBPFNqQ@xolHo91VaUqB85IfMkkxlzX4bBUmcEKlcUcJKW3iM1my0iiT96QBPQase0zEtdwcIxcGb4dUx0l1/0DVWk5CJ/8G00G38IuVY5nEIzsvav1lyaiIBBrpyy0wT5cT6RrYBawu8498o1GpeYCkpFRNw6s9U7l18KTVWi8hgMN7yEoGyRjx6NhpXMnNewZmYVmGLl5wgz@osSP3kL/A2Ha097JQ7nr0l2WY1Fy8bOXldL1wTTWHU/nSzudPc6fnl9e36J5NO8ejvIf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes input in reverse order from the test cases. Explanation: Too many edge cases costing me a whole 10 bytes.</p>
@@ -60,22 +76,6 @@
 <pre><code>»⭆¹⊟η
 </code></pre>
 <p>Pretty-print the final simplex.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="noreferrer">Python</a>, <s>85</s> 84 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>f=lambda s,n,l,r=1:n and[f(s,n-1,i+1,-(-1)**i)for i in range(l)[::r]][::r]or next(s)
-</code></pre>
-<p>Takes the string (<code>s</code>) as an iterator of characters -- to take a <code>str</code>, add <code>(s:=iter(s))and </code> as the first thing in the lambda body for +16 bytes.<br />
-Assumes <code>l</code> is nonzero -- to support the case where <code>l</code> is zero, change <code>&lt;a&gt; and&lt;b&gt;or &lt;c&gt;</code> to <code>&lt;b&gt;if &lt;a&gt; else &lt;c&gt;</code> for +2 bytes.</p>
-<p><a href="https://ato.pxeger.com/run?1=zVbJbttADD3XXzE9SUrHQGVnNeBD9mbfV8EobEuylciyLI3jJciX9JJL-xv9jvZrSpEjaeykSdEWRQOMQz7ykRyKGs2nL-FItLvB4-PnvnCLi99O3apf7zTsOot5wH0eVc1KwOqBbbk6IEWTe-9MXtSLpjEz4xluN2Ie8wIW1YOWo_uGValEtRr-gilwhkKPDYr9_c1X4cTioxeEfRGzKrMKulbXOHvPmWnwXCmpSllVZjPFzDgN0iSp0SS1nKo26TmzlDObpGZU23EJKStIq-3dEJrHKCsxbNJLTynlp4Fu_U7QDXtRLMieh5xVQzoETMdENpl-Hrh_NxiOxmapPDs3v7C4RO55nrmJPC4hzyaiaOTwWrrlldW19Y3ND1vbO7t7-weHR8cnp2fnF5dX10khFCOvYX6yhhZBLxQhc5BfUkutUMBZ6vZFNkxJ6OkfC35r9I9rDVXkWnNa5ZqNEJIygVup9zMQSNBCzSHuqw6gwWa1NiwP1o2kUEJF5JaF1VppVS8bE-QGEYqc5qHMf0hO7LeI-oB0UApBgkHUAtR6IEWwYlgiSyc3NaFwi9JjUOqOndb4y45o60qbj7YO1aLUKtsrd0X7-VdJkBtKzx7aqT2EjBAZADJE6Q6kvmxdYh8jagJSQmkOJHiFtDJq8yAtwFqEtaRsKW33lMqtdJNUVlMmoWF0sr78Jo38-plfT_pF6JcPhNoRGqEAR0jtLxyZSl-po_95aZTjLoszkCx6sCPwG2e2bWnbRNsHsG1JZAORNUDWUVoFCc46bTnj7kjPXbTvgW1fIqeIHANygtIRSIewDqT9DNFzQC5QugbpCtalMmTJaCUjpjY7G6cnALfyByAb0MwKTQ8UJzv5Wn81jGStKKxBxhpOvGDjtINPnlIk_WL0E_j6TU8JnWzJGTc5G7eA5DNB05BuED5KyX0I7knM9jpOEHvdAGTfCVqibXCmfLGSK9PYC3XlQjRhj41KgcFfvSn6dR8-b67uCSeCu9Szsck3jp1IZJSqGo8zV3OGodMUjs3uFcMDZ62uYPfEetAKhTDyAqFry76PAWIWJoHtt5pRoHtcelf8AQ" rel="noreferrer">Attempt This Online!</a> (does not have the final 3 test cases)</p>
-<p>Ungolfed:</p>
-<pre class="lang-python prettyprint-override"><code>def snake(src, dimensions, length, reverse=False):
-    if dimensions == 0:
-        return next(src)
-    maybe_rev = lambda seq: seq[::-1] if reverse else seq
-    return maybe_rev([snake(src, dimensions - 1, length=i+1, reverse=(i+1)%2==1)
-        for i in maybe_rev(range(length))])
-</code></pre>
-<p>Not really much to say -- just uses recursion to build the specified simplex, with characters coming from a stateful iterator. In the golfed code, instead of a boolean <code>reverse</code> parameter, we take <code>r</code>: 1 for forwards, -1 for backwards. With that change, <code>maybe_rev</code> simply becomes <code>lambda seq: seq[::r]</code>, and we use powers of -1 to express alternating directions.</p>
 </div>
 
 <table id="st">
