--- a/q/275270.html
+++ b/q/275270.html
@@ -40,7 +40,7 @@ Assumes <code>l</code> is nonzero -- to support the case where <code>l</code> is
     if dimensions == 0:
         return next(src)
     maybe_rev = lambda seq: seq[::-1] if reverse else seq
-    return maybe_rev([snake(src, dimensions - 1, length=i+1, reverse=(i+1)%2==1)
+    return maybe_rev([snake(src, dimensions - 1, length=i+1, reverse=i%2==0)
         for i in maybe_rev(range(length))])
 </code></pre>
 <p>Not really much to say -- just uses recursion to build the specified simplex, with characters coming from a stateful iterator. In the golfed code, instead of a boolean <code>reverse</code> parameter, we take <code>r</code>: 1 for forwards, -1 for backwards. With that change, <code>maybe_rev</code> simply becomes <code>lambda seq: seq[::r]</code>, and we use powers of -1 to express alternating directions.</p>
