--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240901T183356Z
+"   /golfscore                                      20240901T191037Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275291.html">How many ways can you make change?              : 0275291</a>
 <a href="q/275270.html">Snake a string through a simplex                : 0275270</a>
 <a href="q/274951.html">Sum-of-four-squares grid                        : 0274951</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
