--- a/q/275291.html
+++ b/q/275291.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>086</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
+<tr d-ix="0"><td>084</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 86 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 84 bytes</h1>
 <p>Expects <code>(list_of_lists)(n)</code> and outputs by printing comma-separated strings.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n&gt;0?a.map((b,i)=&gt;b.map(c=&gt;g(n-i,...o,c))):n||g[o.sort()]||print(g[o]=o)
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n&gt;0?a.map(b=&gt;b.map(c=&gt;g(n,...o,c))|n--):n||g[o.sort()]||print(g[o]=o)
 </code></pre>
-<p><a href="https://tio.run/##dYxBCoMwEEX3niLMKgMxWm2hFGKhy15BsohplRSaiIp04d3TNKB04@z@f2/@S81q1IPpp3Q@@1Z4JapOUMs45w5FZav8qvhb9ZQ2zISiiUEHi9rURI1pRLzYZelqx0c3TBTlsvSDsRMNlRQOfUvrhJBaMrJelhFjH88PyX8ANDACIwRhA4cIClifNlDsTZV74BinbsDgDvIfnBKJtET/BQ" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##dcyxCoMwEAbg3acIN@UgRqstlEJS6NhXkAwxraLQRFSkQ949tVKlizcd9/33t3rSg@mbboync6hE0ELWglrGOXcopJXpVfOX7mgpZLksZk78AswgehvHeLHe14Xjg@tHisr7rm/sSOeTEg5DRYuIkEIxsk6SkMY@nm@SfgEMMAIDzIENDgtksD5tkO1V5XtwXKpuwOAO6h9OkUKaY/gA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
