--- a/q/275291.html
+++ b/q/275291.html
@@ -26,23 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
-<tr d-ix="1"><td>082</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
+<tr d-ix="0"><td>082</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
+<tr d-ix="1"><td>022</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>29</s> <s>24</s> 22 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
+<p>Expects <code>(list_of_lists)(n)</code> without the list of weight 0. Outputs by printing comma-separated strings.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n?a.map(b=&gt;n--&gt;0&amp;&amp;b.map(c=&gt;g(n,...o,c))):g[o.sort()]||print(g[o]=o)
+</code></pre>
+<p><a href="https://tio.run/##dY7LCoMwEEX3fsWQhWQgxlYrlEosdtlfkCxiWsVCE1GRLvx366MtbjqrmXMuw32oXrW6qerO649jIUYlklJQwzjnFkVizoo/VU3zafW8ZOe6@XLrKfZJMY2IpzKzvLVNR1EOQ91UpqMTksLiqK1pO0hBQOYAZEQTBqQlkoHvQ2Vu9xfsFxHMbJmfCGbxpVsR/hOH5dWFMHIlcisiR8aOU9AUaYgxrB0xXkmE4xs" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>29</s> <s>24</s> 22 bytes</h1>
 <pre><code>Żp&quot;ṚẎẎ€Ṣ€Q
 Lrṁƒ⁸ṭ@ÇƤ$/
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///o7gKlhztnPdzVB0SPmtY83LkISAZy@RQ93Nl4bNKjxh0Pd651ONx@bImK/v/DyyHS7v//R3MpKETH6ijAgLJCZl5KaoWCAUhcKVlJR0GpWAkoDxM3BIsbKcG0wMSNcJhjjEPcBGyOk5KOkpdSLJK4KVfsf3MA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
 <p>Given the objects on the left and n on the right, outputs a list of the first n-1 collections of multisets. This behavior is faulty, but I'll edit in the fix with the explanation.</p>
 <p>Very messy, lots of room for golf. Just took embarrassingly long to get 100% working.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
-<p>Expects <code>(list_of_lists)(n)</code> without the list of weight 0. Outputs by printing comma-separated strings.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n?a.map(b=&gt;n--&gt;0&amp;&amp;b.map(c=&gt;g(n,...o,c))):g[o.sort()]||print(g[o]=o)
-</code></pre>
-<p><a href="https://tio.run/##dcyxCoMwEAbg3acIN0gOYmy1QinEQse@gmSIaRULTcSIdPDdUw1tcelNd//3cw81KaeHrh@T6egb4ZUoW0EN45xbFKU5K/5UPa2XNUnKXRzX4dZL7dNiGhFPbWW5s8NIUc5zP3RmpEskhUXf0CoipAINjIADyUiaks7c7i@yD5CtWZgfZCt80y3k/@AQXl2AwRXkFopIIs3RvwE" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
