--- a/q/275291.html
+++ b/q/275291.html
@@ -44,10 +44,10 @@ Lr‘ṁƒḷ          This reuses the empty first list repeatedly to pad to n+1
            /    Reduce the padded list by
         Ç       calling the helper on
          Ƥ      every prefix of
-      ṭ@        the accumulator with the current element appended.
+      ṭ@  $     the accumulator with the current element appended.
 
 Żp&quot;ṚẎẎ€Ṣ€Q    Helper link: paired combinations adding up to length of prefix
-Ż             Prepend 0 to the prefix,
+Ż             Prepend 0 (rangifies to an empty list) to the prefix,
  p&quot;           and take Cartesian products with corresponding elements of
    Ṛ          the prefix reversed.
     Ẏ         Concatenate the products of each pair,
@@ -55,6 +55,7 @@ Lr‘ṁƒḷ          This reuses the empty first list repeatedly to pad to n+1
        Ṣ€     sort each combination,
          Q    and uniquify.
 </code></pre>
+<p>As an amusing aside... I meant to use <code>¥</code> in place of <code>$</code>, but there's no difference here, because apparently <code>/</code> coercing its operand to a dyad even affects how said operand chains.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
 <p>Expects <code>(list_of_lists)(n)</code> without the list of weight 0. Outputs by printing comma-separated strings.</p>
