--- a/q/275291.html
+++ b/q/275291.html
@@ -33,7 +33,18 @@
 <pre><code>ŒṗḟÐḟJ}ịŒp€ẎṢ€Q
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///opIc7pz/cMf/wBCDhVftwd/fRSQWPmtY83NX3cOciICPwP5AJpA8vBxIOEDH3//@juRQUlBWiY3UUYEBZITMvJbVCwQAoE62UrKSjoFSsBJSHiRuCxY2UYFpg4kYgcSzmGOMQNwGb46Sko@SlFIskbsoV@98MAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Oh yeah.</p>
+<p>Oh yeah... Still feels pretty golfable around the <code>ḟÐḟJ}</code>, but the best I've come up with is <code>«ƑƇL}</code> for another 5.</p>
+<p>Given n on the left and the objects (with no 0 list!) on the right, outputs the nth collection of multisets.</p>
+<pre><code>Œṗ                 Integer partitions of n.
+   Ðḟ              Filter out partitions which
+  ḟ                have elements not contained in
+     J}            [1 .. len(objects)].
+       ị           Index each integer in each partition into the objects,
+        Œp€        take the Cartesian product of the lists in each partition,
+           Ẏ       flatten the partitions out,
+            Ṣ€     sort each combination,
+              Q    and uniquify.
+</code></pre>
 <h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> <s>26</s> 23 bytes</h1>
 <pre><code>Żp&quot;ṚẎẎ€Ṣ€Q
 Lr‘ṁƒḷṭ@ÇƤ$/
