--- a/q/275291.html
+++ b/q/275291.html
@@ -26,42 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>052</td><td>Charcoal</td><td>240901T222104Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275294#275294">Neil</a></td></tr>
-<tr d-ix="1"><td>015</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
+<tr d-ix="0"><td>014</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
+<tr d-ix="1"><td>052</td><td>Charcoal</td><td>240901T222104Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275294#275294">Neil</a></td></tr>
 <tr d-ix="2"><td>082</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 52 bytes</h1>
-<pre><code>⊞υ⊞ＯＥθκωＦυ≡§Ｉ⁻↨Ｅ§ι±¹§θκ¹η⁰0…⮌ι¹-¿⊖Ｌι⊞⊞ＯυΦιλ⊞Ｏι⁺⊟ι§ι⁰
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>15</s> 14 bytes</h1>
+<pre><code>ŒṗịŒp€ẎṢ€Qɓ;Ṭ}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=VVBBTsMwEBTXvmKV01o4UlMJhOBEg5BAFCKuVQ_G3TQWJgm204KqvoRLDyD4UnkNm7SV6MEae3dndsYfP7pQTlfKrtdfTcjjs9-j46zxBTYSWnyoyalQORypGl8lPAsJCyEuennlABsBfmGCLgAvw005pTdMlQ84MmXjcag8dbx9z0i4p5kKhIlgnX25k-V3wqdoL30hYNnTTIeoH51D5kwZMH3XltKiqvGR5uRY23QkNrMdjXnU5IBXpB29UBloindUzkLBkyzZ5ToIxSGvjQ3kWmu2XX3Q5mJmOUjGO80_w6azyHtXn_5J-93PfY-jeG6jySYeLyPNXhIJkd_hgHHAOGQ8YbxtcSXhdLIl_wE" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Takes the collection as a dictionary mapping coin identifiers to values. Explanation:</p>
-<pre><code>⊞υ⊞ＯＥθκωＦυ
-</code></pre>
-<p>Start a breadth-first search with all coin identifiers and no coins chosen so far.</p>
-<pre><code>≡§Ｉ⁻↨Ｅ§ι±¹§θκ¹η⁰
-</code></pre>
-<p>Compare the value of the coins so far with the desired target.</p>
-<pre><code>0…⮌ι¹
-</code></pre>
-<p>If the target has been hit then output the coins.</p>
-<pre><code>-¿⊖Ｌι⊞⊞ＯυΦιλ⊞Ｏι⁺⊟ι§ι⁰
-</code></pre>
-<p>If the coins are insufficient then try both skipping the current coin and adding the current coin to the set of coins chosen.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 bytes</h1>
-<pre><code>ŒṗḟÐḟJ}ịŒp€ẎṢ€Q
-</code></pre>
-<p><a href="https://tio.run/##y0rNyan8///opIc7pz/cMf/wBCDhVftwd/fRSQWPmtY83NX3cOciICPwP5AJpA8vBxIOEDH3//@juRQUlBWiY3UUYEBZITMvJbVCwQAoE62UrKSjoFSsBJSHiRuCxY2UYFpg4kYgcSzmGOMQNwGb46Sko@SlFIskbsoV@98MAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Oh yeah... Still feels pretty golfable around the <code>ḟÐḟJ}</code>, but the best I've come up with is <code>«ƑƇL}</code> for another 5.</p>
+<p><a href="https://tio.run/##y0rNyan8///opIc7pz/c3X10UsGjpjUPd/U93LkIyAg8Odn64c41tf@BIkDu4eVAwgEi5f7/fzSXgoKyQnSsjgIMKCtk5qWkVigYAGWilZKVdBSUipWA8jBxQ7C4kRJMC0zcCCSOxRxjHOImYHOclHSUvJRikcRNuWL/mwEA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>Oh yeah...</p>
 <p>Given n on the left and the objects (with no 0 list!) on the right, outputs the nth collection of multisets.</p>
-<pre><code>Œṗ                 Integer partitions of n.
-   Ðḟ              Filter out partitions which
-  ḟ                have elements not contained in
-     J}            [1 .. len(objects)].
-       ị           Index each integer in each partition into the objects,
-        Œp€        take the Cartesian product of the lists in each partition,
-           Ẏ       flatten the partitions out,
-            Ṣ€     sort each combination,
-              Q    and uniquify.
+<pre><code>Œṗ                Integer partitions of n.
+  ị               Index each integer in each partition into
+          ɓ       the objects
+           ;      concatenated with
+            Ṭ}    n-1 0s and a 1,
+   Œp€            take the Cartesian product of the lists in each partition,
+      Ẏ           flatten the partitions out,
+       Ṣ€         sort each combination,
+         Q        and uniquify.
 </code></pre>
 <h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> <s>26</s> 23 bytes</h1>
 <pre><code>Żp&quot;ṚẎẎ€Ṣ€Q
@@ -90,6 +73,23 @@ Lr‘ṁƒḷ          This reuses the empty first list repeatedly to pad to n+1
          Q    and uniquify.
 </code></pre>
 <p>As an amusing aside... I meant to use <code>¥</code> in place of <code>$</code>, but there's no difference here, because apparently <code>/</code> coercing its operand to a dyad even affects how said operand chains.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 52 bytes</h1>
+<pre><code>⊞υ⊞ＯＥθκωＦυ≡§Ｉ⁻↨Ｅ§ι±¹§θκ¹η⁰0…⮌ι¹-¿⊖Ｌι⊞⊞ＯυΦιλ⊞Ｏι⁺⊟ι§ι⁰
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=VVBBTsMwEBTXvmKV01o4UlMJhOBEg5BAFCKuVQ_G3TQWJgm204KqvoRLDyD4UnkNm7SV6MEae3dndsYfP7pQTlfKrtdfTcjjs9-j46zxBTYSWnyoyalQORypGl8lPAsJCyEuennlABsBfmGCLgAvw005pTdMlQ84MmXjcag8dbx9z0i4p5kKhIlgnX25k-V3wqdoL30hYNnTTIeoH51D5kwZMH3XltKiqvGR5uRY23QkNrMdjXnU5IBXpB29UBloindUzkLBkyzZ5ToIxSGvjQ3kWmu2XX3Q5mJmOUjGO80_w6azyHtXn_5J-93PfY-jeG6jySYeLyPNXhIJkd_hgHHAOGQ8YbxtcSXhdLIl_wE" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Takes the collection as a dictionary mapping coin identifiers to values. Explanation:</p>
+<pre><code>⊞υ⊞ＯＥθκωＦυ
+</code></pre>
+<p>Start a breadth-first search with all coin identifiers and no coins chosen so far.</p>
+<pre><code>≡§Ｉ⁻↨Ｅ§ι±¹§θκ¹η⁰
+</code></pre>
+<p>Compare the value of the coins so far with the desired target.</p>
+<pre><code>0…⮌ι¹
+</code></pre>
+<p>If the target has been hit then output the coins.</p>
+<pre><code>-¿⊖Ｌι⊞⊞ＯυΦιλ⊞Ｏι⁺⊟ι§ι⁰
+</code></pre>
+<p>If the coins are insufficient then try both skipping the current coin and adding the current coin to the set of coins chosen.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
 <p>Expects <code>(list_of_lists)(n)</code> without the list of weight 0. Outputs by printing comma-separated strings.</p>
