--- a/q/183315.html
+++ b/q/183315.html
@@ -26,20 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>194</td><td>Chipmunk Basic</td><td>240901T051314Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275287#275287">roblogic</a></td></tr>
-<tr d-ix="1"><td>012</td><td>UiuaSBCS</td><td>240829T083517Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275232#275232">Europe20</a></td></tr>
-<tr d-ix="2"><td>350</td><td>gnuplot 6.0.1</td><td>240829T052914Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275229#275229">roblogic</a></td></tr>
-<tr d-ix="3"><td>153</td><td>JavaScript + HTML Canvas</td><td>221117T110358Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/254648#254648">CreaZyp1</a></td></tr>
-<tr d-ix="4"><td>043</td><td>x8616 machine code</td><td>190416T182143Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183326#183326">640KB</a></td></tr>
-<tr d-ix="5"><td>3161</td><td>Processing 3  161 Bytes</td><td>201019T015901Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/213811#213811">TheCoder</a></td></tr>
-<tr d-ix="6"><td>060</td><td>PostScript</td><td>190507T183534Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/185285#185285">Thomas F</a></td></tr>
-<tr d-ix="7"><td>161</td><td>APL dzaima/APL</td><td>200828T124259Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/210264#210264">Razetime</a></td></tr>
-<tr d-ix="8"><td>113</td><td>Ruby</td><td>200805T173926Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/209114#209114">Razetime</a></td></tr>
-<tr d-ix="9"><td>229</td><td>Java 10</td><td>200805T133448Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/209108#209108">Kevin Cr</a></td></tr>
-<tr d-ix="10"><td>123</td><td>Python</td><td>191211T013053Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/196883#196883">Joe Habe</a></td></tr>
-<tr d-ix="11"><td>208</td><td>Tcl/Tk</td><td>190619T001751Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/187060#187060">sergiol</a></td></tr>
-<tr d-ix="12"><td>111</td><td>Javascript</td><td>190417T090352Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183378#183378">jdt</a></td></tr>
-<tr d-ix="13"><td>070</td><td>ExcelVBA</td><td>190417T141457Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183393#183393">i_saw_dr</a></td></tr>
+<tr d-ix="0"><td>070</td><td>ExcelVBA</td><td>190417T141457Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183393#183393">i_saw_dr</a></td></tr>
+<tr d-ix="1"><td>194</td><td>Chipmunk Basic</td><td>240901T051314Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275287#275287">roblogic</a></td></tr>
+<tr d-ix="2"><td>012</td><td>UiuaSBCS</td><td>240829T083517Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275232#275232">Europe20</a></td></tr>
+<tr d-ix="3"><td>350</td><td>gnuplot 6.0.1</td><td>240829T052914Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/275229#275229">roblogic</a></td></tr>
+<tr d-ix="4"><td>153</td><td>JavaScript + HTML Canvas</td><td>221117T110358Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/254648#254648">CreaZyp1</a></td></tr>
+<tr d-ix="5"><td>043</td><td>x8616 machine code</td><td>190416T182143Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183326#183326">640KB</a></td></tr>
+<tr d-ix="6"><td>3161</td><td>Processing 3  161 Bytes</td><td>201019T015901Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/213811#213811">TheCoder</a></td></tr>
+<tr d-ix="7"><td>060</td><td>PostScript</td><td>190507T183534Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/185285#185285">Thomas F</a></td></tr>
+<tr d-ix="8"><td>161</td><td>APL dzaima/APL</td><td>200828T124259Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/210264#210264">Razetime</a></td></tr>
+<tr d-ix="9"><td>113</td><td>Ruby</td><td>200805T173926Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/209114#209114">Razetime</a></td></tr>
+<tr d-ix="10"><td>229</td><td>Java 10</td><td>200805T133448Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/209108#209108">Kevin Cr</a></td></tr>
+<tr d-ix="11"><td>123</td><td>Python</td><td>191211T013053Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/196883#196883">Joe Habe</a></td></tr>
+<tr d-ix="12"><td>208</td><td>Tcl/Tk</td><td>190619T001751Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/187060#187060">sergiol</a></td></tr>
+<tr d-ix="13"><td>111</td><td>Javascript</td><td>190417T090352Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183378#183378">jdt</a></td></tr>
 <tr d-ix="14"><td>152</td><td>Racket BSL + 2htdp/image</td><td>190507T212902Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/185289#185289">sporkl</a></td></tr>
 <tr d-ix="15"><td>058</td><td>[C64 Assembly]</td><td>190501T214827Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/185039#185039">Natural </a></td></tr>
 <tr d-ix="16"><td>042</td><td>[x86 Assembly]</td><td>190425T014703Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/184725#184725">Natural </a></td></tr>
@@ -88,7 +88,24 @@
 <tr d-ix="59"><td>041</td><td>Wolfram Language Mathematica</td><td>190416T163737Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183320#183320">alephalp</a></td></tr>
 <tr d-ix="60"><td>072</td><td>Wolfram Language Mathematica</td><td>190416T162857Z</td><td><a href="https://codegolf.stackexchange.com/questions/183315/generate-an-rgb-colour-grid/183318#183318">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 194 bytes</h1>
+<div id="pu0" class="pu"><h1>Excel-VBA, <s>89</s> <s>73</s> <s>72</s> 70 bytes</h1>
+
+<p>Edit: You can use the immediate window and dispense with the <code>Sub</code>/<code>End Sub</code> to save 16 bytes:</p>
+<pre class="lang-vb prettyprint-override"><code>For i=1To 9:[A:C].Cells(i).Interior.ColorIndex=Mid(367648785,i,1):Next
+</code></pre>
+<p>Original answer:</p>
+<pre class="lang-vb prettyprint-override"><code>Sub a()
+For i=1To 9
+[A1:C3].Cells(i).Interior.ColorIndex=Mid(367648785,i,1)
+Next
+End Sub
+</code></pre>
+<p>This was inspired by <a href="https://codegolf.stackexchange.com/users/17602/neil">Neil</a>'s suggestion on <a href="https://codegolf.stackexchange.com/a/183352/86631">this</a> answer, and is my first submission!</p>
+<p>Result:</p>
+<p><a href="https://i.sstatic.net/wsWFQ.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/wsWFQ.png" alt="Result Grid" /></a></p>
+<p><strong>-2 bytes</strong>: Removal of cell row numbers - thanks to <a href="https://codegolf.stackexchange.com/users/61846">Taylor Raine</a>!</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 194 bytes</h1>
 <pre class="lang-pascal prettyprint-override"><code>data 3,0,0,3,3,0,3,0,3,3,3,0,0,3,0,0,3,3,3,0,3,0,3,3,0,0,3
 k=33:graphics 0
 for i=1 to 99 step k
@@ -100,7 +117,7 @@ next:next
 </code></pre>
 <img src="https://i.sstatic.net/HlVwmbNO.png" width="300"/>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Aug-16" rel="nofollow noreferrer">SBCS</a></sup>, 12 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Aug-16" rel="nofollow noreferrer">SBCS</a></sup>, 12 bytes</h1>
 <pre><code>&amp;ims⊞+.⊞=.⇡3
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__4omh4pa9MzMuM-KWvTMzLjPiip4rLuKKnj0u4oehMwo=" rel="nofollow noreferrer">Try it here!</a></p>
@@ -117,7 +134,7 @@ next:next
 &amp;ims         | show the image            |
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="http://gnuplot.info/" rel="nofollow noreferrer">gnuplot</a> 6.0.1, 350 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="http://gnuplot.info/" rel="nofollow noreferrer">gnuplot</a> 6.0.1, 350 bytes</h1>
 <pre class="lang-gnuplot prettyprint-override"><code>se label 1 at 0,.1 '#' tc rgb &quot;magenta&quot;
 se label 2 at 1,.1 '#' tc rgb &quot;cyan&quot;
 se label 3 at 2,.1 '#' tc rgb &quot;blue&quot;
@@ -154,7 +171,7 @@ p [0:3] 0 notitle
 <p>Longer program but better output.</p>
 <p><a href="https://i.sstatic.net/YGlRhux7.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/YGlRhux7.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript + HTML Canvas, 153 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript + HTML Canvas, 153 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>c=c.getContext`2d`;for(i=0;i&lt;9;i++){x=i/3|0;y=i%3;c.fillStyle=`rgb(${(!x|!y)*255},${(x==1|y==1)*255},${(x&gt;1|y&gt;1)*255})`;c.fillRect(x,y,1,1)}</code></pre>
@@ -163,7 +180,7 @@ p [0:3] 0 notitle
 </div>
 </p>
 </div>
-<div id="pu4" class="pu"><h1>x86-16 machine code, IBM PC DOS, 43 bytes</h1>
+<div id="pu5" class="pu"><h1>x86-16 machine code, IBM PC DOS, 43 bytes</h1>
 <pre><code>00000000: be22 01b9 0100 ac8a d83c 10b8 db09 cd10  .&quot;.......&lt;......
 00000010: b403 cd10 7204 7809 b2ff 42b4 02cd 10eb  ....r.x...B.....
 00000020: e2c3 0c0e 1d0e 0a1b 0d0b 91              ...........
@@ -232,11 +249,11 @@ C3          RET                     ; return to DOS
  2    0   0200   ; add one to DX
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h2>Processing 3: <strike>191</strike> <strike>178</strike> 161 Bytes</h2>
+<div id="pu6" class="pu"><h2>Processing 3: <strike>191</strike> <strike>178</strike> 161 Bytes</h2>
 <pre class="lang-java prettyprint-override"><code>int l=0;void setup(){size(33,33);}void draw(){int i=l%33;int j=l/33;stroke((i%3==0||j%3==0)?255:0,(i%3==1||j%3==1)?255:0,(i%3==2||j%3==2)?255:0);point(i,j);l++;}
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://en.wikipedia.org/wiki/PostScript" rel="nofollow noreferrer">PostScript</a>, <s>77</s> <s>61</s> 60 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://en.wikipedia.org/wiki/PostScript" rel="nofollow noreferrer">PostScript</a>, <s>77</s> <s>61</s> 60 bytes</h1>
 
 <p>Code:</p>
 <pre class="lang-postscript prettyprint-override"><code>3 3 1[.1 0 0 .1 0 0]&lt;AC80C9809A8&gt;false 3 colorimage showpage
@@ -244,7 +261,7 @@ C3          RET                     ; return to DOS
 <p>Result:</p>
 <p><a href="https://i.sstatic.net/7w6N7.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/7w6N7.png" alt="result" /></a></p>
 </div>
-<div id="pu7" class="pu"><h2><a href="https://github.com/dzaima/APL" rel="nofollow noreferrer">APL (dzaima/APL)</a>, <s>186</s> 161 bytes</h2>
+<div id="pu8" class="pu"><h2><a href="https://github.com/dzaima/APL" rel="nofollow noreferrer">APL (dzaima/APL)</a>, <s>186</s> 161 bytes</h2>
 <p>Uses dzaima's Processing integration.</p>
 
 <pre class="lang-apl prettyprint-override"><code>G←P5.G
@@ -268,7 +285,7 @@ p 1 1}
 <h3>Actual size:</h3>
 <p><a href="https://i.sstatic.net/cqd3F.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/cqd3F.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 113 bytes (Ubuntu Terminal)</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 113 bytes (Ubuntu Terminal)</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>a=[[91,93,95],[93,32,96],[95,96,34]]
 for b,c,d in a do puts&quot;\e[#{b}m█\e[0m\e[#{c}m█\e[0m\e[#{d}m█\e[0m&quot; end
@@ -278,7 +295,7 @@ for b,c,d in a do puts&quot;\e[#{b}m█\e[0m\e[#{c}m█\e[0m\e[#{d}m█\e[0m&quo
 <p>According to <a href="https://en.wikipedia.org/wiki/ANSI_escape_code" rel="nofollow noreferrer">Wikipedia</a>, this program should fit the spec if it's run on Ubuntu, which is the only terminal which has the colors as per specifications. Can someone help me out with this?</p>
 <p><a href="https://tio.run/##KypNqvz/P9E2OtrSUMfSWMfSNFYnGkgbG@lYmoGYpkBax9gkNpYrLb9IIUknWSdFITNPIVEhJV@hoLSkWCkmNVq5Oqk299G0DiDTIBfMT0bjpyD4SgqpeSn//wMA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1>Java 10, 229 bytes</h1>
+<div id="pu10" class="pu"><h1>Java 10, 229 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>import java.awt.*;v-&gt;new Frame(){{add(new Panel(){public void paint(Graphics g){var G=(Graphics2D)g;for(int i=9;i--&gt;0;G.fillRect(i%3*4,i/3*4,4,4))G.setColor(new Color(i&lt;4|i==6?255:0,i%2&gt;0|i==4?255:0,i&gt;4|i==2?255:0));}});show();}}
 </code></pre>
@@ -306,7 +323,7 @@ v-&gt;                               // Method with empty unused parameter and F
      show();}}                    //    And show the Frame when we're done
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>Python 123 bytes</h1>
+<div id="pu11" class="pu"><h1>Python 123 bytes</h1>
 
 <pre><code>from matplotlib.pyplot import*;r=0,1,2;imshow([[[2.if i==j==k else 1if(i==k)|(j==k)else 0for k in r]for j in r]for i in r])
 </code></pre>
@@ -334,7 +351,7 @@ for i in r:
 imshow(image)
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>Tcl/Tk, 208 bytes</h1>
+<div id="pu12" class="pu"><h1>Tcl/Tk, 208 bytes</h1>
 <pre><code>gri [can .c]
 proc O {x y z w C\ #FF0} {.c cr o $x $y $z $w -f $C}
 O 2 2 5 5 red
@@ -354,7 +371,7 @@ O 14 14 17 17 #00F
 </ul>
 <p><a href="https://i.sstatic.net/exGdT.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/exGdT.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu12" class="pu"><h2>Javascript, <s>134</s> <s>131</s> 111 bytes</h2>
+<div id="pu13" class="pu"><h2>Javascript, <s>134</s> <s>131</s> 111 bytes</h2>
 
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
@@ -362,30 +379,6 @@ O 14 14 17 17 #00F
 </div>
 </div>
 </p>
-</div>
-<div id="pu13" class="pu"><h1>Excel-VBA, <s>89</s> <s>73</s> <s>72</s> 70 bytes</h1>
-
-<p>Edit: You can use the immediate window and dispense with the <code>Sub</code>/<code>End Sub</code> to save 16 bytes:</p>
-
-<pre><code>For i=1To 9:[A:C].Cells(i).Interior.ColorIndex=Mid(367648785,i,1):Next
-</code></pre>
-
-<p>Original answer:</p>
-
-<pre><code>Sub a()
-For i=1To 9
-[A1:C3].Cells(i).Interior.ColorIndex=Mid(367648785,i,1)
-Next
-End Sub
-</code></pre>
-
-<p>This was inspired by <a href="https://codegolf.stackexchange.com/users/17602/neil">Neil</a>'s suggestion on <a href="https://codegolf.stackexchange.com/a/183352/86631">this</a> answer, and is my first submission!</p>
-
-<p>Result:</p>
-
-<p><a href="https://i.sstatic.net/wsWFQ.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/wsWFQ.png" alt="Result Grid"></a></p>
-
-<p><strong>-2 bytes</strong>: Removal of cell row numbers - thanks to <a href="https://codegolf.stackexchange.com/users/61846/taylor-scott">Taylor Scott</a>!</p>
 </div>
 <div id="pu14" class="pu"><h1>Racket (BSL + 2htdp/image), 152 bytes</h1>
 
