--- a/q/17294.html
+++ b/q/17294.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>131</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
-<tr d-ix="1"><td>235</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
+<tr d-ix="0"><td>226</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
+<tr d-ix="1"><td>131</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
 <tr d-ix="2"><td>207</td><td>J</td><td>240830T171122Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275267#275267">Conor O&</a></td></tr>
 <tr d-ix="3"><td>089</td><td>Japt R</td><td>180601T092243Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/165896#165896">Shaggy</a></td></tr>
 <tr d-ix="4"><td>453</td><td>Go</td><td>240830T152328Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275265#275265">bigyihsu</a></td></tr>
@@ -73,7 +73,25 @@
 <tr d-ix="44"><td>273</td><td>Python</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
 <tr d-ix="45"><td>442</td><td>PHP</td><td>140103T190034Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17358#17358">Sammitch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, <s>142</s> <s>136</s> 131 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> 226 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>T=METHINKS@IT@IS@LIKE@A@WEASEL
+S=`jot -s '' -cr 28 64 90`
+for i ({0..99}){V=0 j=;echo -n $i: ${S//@/ }
+for x (${(s::)S}){n=$T[++j]
+((#x!=#n&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 64 90`
+((#x==#n&amp;&amp;V++))};&lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;?}
+</code></pre>
+<p><a href="https://tio.run/##Nc3NCoJAFEDhvU9xK7MZZNIkIn8ujZCQaAWN2EKEQIpyoaAtIvHZzaT2H@e863vXRbj3op1/CAT3I@4LHvqBx11@9lzhhZLAS14@gdUwmwHLKjDWsFqCqV@kW1nBA0ijz@em2dImRh1ytK/ZvQRWgPywQG6EpnEN2gG/gMgNqS2Lip4XKEeJquapRMjkNcJJoSgn97A97qeGTqmiiCRPf/f@u/hvvxoHHasqpa3tOM4YGIM6K6tr/4zHNiExorH@VjZt130A" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##Nc3LaoNAGIbhvVfx1Vgzg0y0EkI8/DBChUoOhY7YRQgExBJdKGgWUvHabSLp/uF9f7vrNKWkH@L0IznulExSmSi5T3axjOR3HKl4r2uKLlVzg@iwXELkEC3cLTZreM5F@2lalGCDs1p53siHjBxUFBT5tYGoYZQ@jEHZtrQxzrgHMwbW@T5Xd16TkZ4sqzprjC36F1rUpvkVHd8/D6@uw7lpqlN1fv7n89v/@OFp9pllcT4GYRjqEAJd3rTF/ZrpAWMZkbt9dIq@vI3T9Ac" rel="nofollow noreferrer">235b</a></s></sub>
+<sub><s><a href="https://tio.run/##dY1Ni4JQFIb3/ooz6si5XEyRoSbzwBUSRvqCrtgigiCMdKGDtpDk/nbHhKDNbF@e530eza3vE9I3UfITb1dSxImIpVjHq0iE4hCFMlrrmqTztaohB@zcycSbKfZb5@X9CmaHBjMR9@F2udt8ejM@/WJMnbU3fD5XrEvJhYIW2eVWgV2CmfuDKx1HOKBGuAUczhrfZ3LASzKTI@fFSUM02g8ySst6NVzGLEseixP9Ux8dGp2U8@cQBIEOtg3NpaqzoZzqC8SUyPt@fmVtfld9/wc" rel="nofollow noreferrer" title="Zsh – Try It Online">260b</a></s></sub></p>
+<p>Found the question a bit confusing, but eventually figured it out. For a minute I thought I had <a href="https://tio.run/##TVBta4JQFP5@f8VZ3dm9iGUyRrWdYTAh6WWQkmAEDmuUWlYGg5m/3R1Fxj4c7jkPz8s95yfbl6WLrbnlTuzF1DFt17Qdc2ZPLXNsetbYsWYtdhYySm@gZdDpgBaCdgVjAM9PMNTZRcicfaVXOIDI9W53OCwIAPAQYoQjQoQ0LTE4B/SekLtrVY021FeiGATPRTYayT7JQIh2jNg@SakoKfKYWFCDDw0oxHK8eP@YPxp6w1mS3XFTEz0VeUpdQRUhrFB/aWKSvxiviqnZ/79ShyRVsqKsVFXK2mUX7lPgHvAVK@5ZeqULxMb99nlIQOu/bVnBLlCt9b0/JDtyCF@NgaTlfRRBw4JtIBuf3O/1zB7Zhsj9tbEhMfdZUZa/" rel="nofollow noreferrer">disproved</a> evolution!!</p>
+<ul>
+<li>Using <code>@</code> in the target string allows me to use ASCII range 64-90</li>
+<li>Using <code>jot -c -r 28 64 90</code> is better than repeatedly doing <code>${(#)$((RANDOM%27+64))}</code></li>
+<li>Saved bytes by removing <code>&quot;&quot;</code>, squishing <code>jot</code> parameters to <code>-cr</code>, and using <code>?</code> to crash the script instead of <code>exit</code>ing properly</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1>Uiua, <s>142</s> <s>136</s> 131 bytes</h1>
 <pre><code>R←⊏:⊂@ +@A⇡26⌊×27≡⋅⚂
 ◌◌⍢(≡⍜▽R&lt;0.05∵⊸⚂↯100|&amp;p$&quot;_: _ -- score: _&quot;:⊃⊙:⊓(≠28:|+1)⊃(⊡⊢⍖)/↥/+=&quot;METHINKS IT IS LIKE A WEASEL&quot;⊸⍉)↯100R⊚28 0
 </code></pre>
@@ -92,22 +110,6 @@
 <p>I also found this alternate solution which is 135 bytes: <a href="https://uiua.org/pad?src=0_13_0-dev_2__IyAxMzUgYnl0ZXMK4peM4peM4o2iKOKJoeKNnOKWveKJoeKLheKagjwwLjA14oi14oq44pqC4oavMTAwfCZwJCJfOiBfIC0tIHNjb3JlIF8i4oqD4oqD4ouF4ouF4ouF4oiYOuKKkyjiiaAyOHzii4XiiJh8KzEp4oqDL-KGpSjiiKniiqHin5w64oqi4o2WKS8rPSJNRVRISU5LUyBJVCBJUyBMSUtFIEEgV0VBU0VMIuKKuOKNieKKj-KMisOXMjcs4oqCQCArQEHih6EyNinihq8xMDBb4o2l4pqCMjhdMAo=" rel="nofollow noreferrer">pad</a>, <a href="https://uiua.org/pad?src=0_13_0-dev_2__MArihq8xMDBb4o2l4pqCMjhdCuKXjOKXjOKNoigKICDiiaEo4o2c4pa94ouF4pqCPDAuMDXiiaHiirjimoIp4oavMTAwCnwg4oqP4oyKw5cyNyziioJAICtAQeKHoTI2CiAgLys9Ik1FVEhJTktTIElUIElTIExJS0UgQSBXRUFTRUwi4oq44o2JCiAg4oqDL-KGpSjiiKniiqHin5w64oqi4o2WKQogIOKKg-KKg-KLheKLheKLheKImDriipMo4omgMjgp4ouF4oqZKCsxKQogICZwJCJfOiBfIC0tIHNjb3JlIF8iKQo=" rel="nofollow noreferrer">with spaces</a></p>
 <pre><code>◌◌⍢(≡⍜▽≡⋅⚂&lt;0.05∵⊸⚂↯100|&amp;p$&quot;_: _ -- score _&quot;⊃⊃⋅⋅⋅∘:⊓(≠28|⋅∘|+1)⊃/↥(∩⊡⟜:⊢⍖)/+=&quot;METHINKS IT IS LIKE A WEASEL&quot;⊸⍉⊏⌊×27,⊂@ +@A⇡26)↯100[⍥⚂28]0
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> 235 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>T=&quot;METHINKS@IT@IS@LIKE@A@WEASEL&quot;
-S=`jot -s '' -c -r 28 64 90`
-for i ({0..99}){V=0 j=;echo -n $i: ${S//@/ }
-for x (${(s::)S}){n=$T[++j]
-((#x!=#n&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -c -r 1 64 90`
-((#x==#n&amp;&amp;V++))};&lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;exit}
-</code></pre>
-<p><a href="https://tio.run/##Nc3LaoNAGIbhvVfx1Vgzg0y0EkI8/DBChUoOhY7YRQgExBJdKGgWUvHabSLp/uF9f7vrNKWkH@L0IznulExSmSi5T3axjOR3HKl4r2uKLlVzg@iwXELkEC3cLTZreM5F@2lalGCDs1p53siHjBxUFBT5tYGoYZQ@jEHZtrQxzrgHMwbW@T5Xd16TkZ4sqzprjC36F1rUpvkVHd8/D6@uw7lpqlN1fv7n89v/@OFp9pllcT4GYRjqEAJd3rTF/ZrpAWMZkbt9dIq@vI3T9Ac" rel="nofollow noreferrer">Try it online!</a>
-<sub><s><a href="https://tio.run/##dY1Ni4JQFIb3/ooz6si5XEyRoSbzwBUSRvqCrtgigiCMdKGDtpDk/nbHhKDNbF@e530eza3vE9I3UfITb1dSxImIpVjHq0iE4hCFMlrrmqTztaohB@zcycSbKfZb5@X9CmaHBjMR9@F2udt8ejM@/WJMnbU3fD5XrEvJhYIW2eVWgV2CmfuDKx1HOKBGuAUczhrfZ3LASzKTI@fFSUM02g8ySst6NVzGLEseixP9Ux8dGp2U8@cQBIEOtg3NpaqzoZzqC8SUyPt@fmVtfld9/wc" rel="nofollow noreferrer" title="Zsh – Try It Online">260b</a></s></sub></p>
-<p>The question is very poorly defined. Without carefully reading the subsequent discussion, the <a href="https://tio.run/##TVBta4JQFP5@f8VZ3dm9iGUyRrWdYTAh6WWQkmAEDmuUWlYGg5m/3R1Fxj4c7jkPz8s95yfbl6WLrbnlTuzF1DFt17Qdc2ZPLXNsetbYsWYtdhYySm@gZdDpgBaCdgVjAM9PMNTZRcicfaVXOIDI9W53OCwIAPAQYoQjQoQ0LTE4B/SekLtrVY021FeiGATPRTYayT7JQIh2jNg@SakoKfKYWFCDDw0oxHK8eP@YPxp6w1mS3XFTEz0VeUpdQRUhrFB/aWKSvxiviqnZ/79ShyRVsqKsVFXK2mUX7lPgHvAVK@5ZeqULxMb99nlIQOu/bVnBLlCt9b0/JDtyCF@NgaTlfRRBw4JtIBuf3O/1zB7Zhsj9tbEhMfdZUZa/" rel="nofollow noreferrer">program never converges</a>, thus 'disproving' evolution!!</p>
-<ul>
-<li>Using <code>@</code> in the target string allows me to use ASCII range 64-90</li>
-<li>Using <code>jot -c -r 28 64 90</code> is better than repeatedly doing <code>${(#)$((RANDOM%27+64))}</code></li>
-</ul>
 </div>
 <div id="pu2" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, <s>222</s> 207 bytes</h1>
 <pre><code>0(Q=:(&gt;:@[;([:(0{]\:G=:1#.T=&quot;1])100((i.+]*1=r@20)@28{],r@27)&quot;{@&gt;@$&lt;)@][&quot;:@G echo@,~' -- score: ',~&quot;:@[,': ',A{~])&amp;&gt;/)@(Q^:(1-(T=:(A=:u:32,65+i.26)i.'METHINKS IT IS LIKE A WEASEL')-:1&gt;@{])^:_)@;(r=:28?@$])@27
