--- a/q/17294.html
+++ b/q/17294.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>226</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
+<tr d-ix="0"><td>219</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
 <tr d-ix="1"><td>131</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
 <tr d-ix="2"><td>207</td><td>J</td><td>240830T171122Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275267#275267">Conor O&</a></td></tr>
 <tr d-ix="3"><td>089</td><td>Japt R</td><td>180601T092243Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/165896#165896">Shaggy</a></td></tr>
@@ -73,22 +73,22 @@
 <tr d-ix="44"><td>273</td><td>Python</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
 <tr d-ix="45"><td>442</td><td>PHP</td><td>140103T190034Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17358#17358">Sammitch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> 226 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> 219 bytes</h1>
 <pre class="lang-sh prettyprint-override"><code>T=METHINKS@IT@IS@LIKE@A@WEASEL
 S=`jot -s '' -cr 28 64 90`
 for i ({0..99}){V=0 j=;echo -n $i: ${S//@/ }
 for x (${(s::)S}){n=$T[++j]
-((#x!=#n&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 64 90`
-((#x==#n&amp;&amp;V++))};&lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;?}
+((#x!=#n&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 64 90`||((V++))}
+&lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;?}
 </code></pre>
-<p><a href="https://tio.run/##Nc3NCoJAFEDhvU9xK7MZZNIkIn8ujZCQaAWN2EKEQIpyoaAtIvHZzaT2H@e863vXRbj3op1/CAT3I@4LHvqBx11@9lzhhZLAS14@gdUwmwHLKjDWsFqCqV@kW1nBA0ijz@em2dImRh1ytK/ZvQRWgPywQG6EpnEN2gG/gMgNqS2Lip4XKEeJquapRMjkNcJJoSgn97A97qeGTqmiiCRPf/f@u/hvvxoHHasqpa3tOM4YGIM6K6tr/4zHNiExorH@VjZt130A" rel="nofollow noreferrer">Try it online!</a>
+<p><a href="https://tio.run/##Lc3NCoJAGIXhvVfxZaYzyKRJRP4MjZCQaAWN2EKEQAp1oaAtIvPazcL1eQ/Pu82HIaJHLzr4p4AzP2I@Z6EfeMxlV8/lXihweivrJ5AWFAVI1oCxhc0aTP0mPOoGCkCdvlyaZo@7mOpQUvue5TWQCqTCAqnjmsY06P/xC5DUodayMB/zikpRoqplKiA0f83ovJLli3van48LQ8dYlnlSppM@uquJ/XwQilUV415wHEcEQqDN6uY@YrFojxulxvZ33/XD8AU" rel="nofollow noreferrer">Try it online!</a>
 <sub><s><a href="https://tio.run/##Nc3LaoNAGIbhvVfx1Vgzg0y0EkI8/DBChUoOhY7YRQgExBJdKGgWUvHabSLp/uF9f7vrNKWkH@L0IznulExSmSi5T3axjOR3HKl4r2uKLlVzg@iwXELkEC3cLTZreM5F@2lalGCDs1p53siHjBxUFBT5tYGoYZQ@jEHZtrQxzrgHMwbW@T5Xd16TkZ4sqzprjC36F1rUpvkVHd8/D6@uw7lpqlN1fv7n89v/@OFp9pllcT4GYRjqEAJd3rTF/ZrpAWMZkbt9dIq@vI3T9Ac" rel="nofollow noreferrer">235b</a></s></sub>
 <sub><s><a href="https://tio.run/##dY1Ni4JQFIb3/ooz6si5XEyRoSbzwBUSRvqCrtgigiCMdKGDtpDk/nbHhKDNbF@e530eza3vE9I3UfITb1dSxImIpVjHq0iE4hCFMlrrmqTztaohB@zcycSbKfZb5@X9CmaHBjMR9@F2udt8ejM@/WJMnbU3fD5XrEvJhYIW2eVWgV2CmfuDKx1HOKBGuAUczhrfZ3LASzKTI@fFSUM02g8ySst6NVzGLEseixP9Ux8dGp2U8@cQBIEOtg3NpaqzoZzqC8SUyPt@fmVtfld9/wc" rel="nofollow noreferrer" title="Zsh – Try It Online">260b</a></s></sub></p>
 <p>Found the question a bit confusing, but eventually figured it out. For a minute I thought I had <a href="https://tio.run/##TVBta4JQFP5@f8VZ3dm9iGUyRrWdYTAh6WWQkmAEDmuUWlYGg5m/3R1Fxj4c7jkPz8s95yfbl6WLrbnlTuzF1DFt17Qdc2ZPLXNsetbYsWYtdhYySm@gZdDpgBaCdgVjAM9PMNTZRcicfaVXOIDI9W53OCwIAPAQYoQjQoQ0LTE4B/SekLtrVY021FeiGATPRTYayT7JQIh2jNg@SakoKfKYWFCDDw0oxHK8eP@YPxp6w1mS3XFTEz0VeUpdQRUhrFB/aWKSvxiviqnZ/79ShyRVsqKsVFXK2mUX7lPgHvAVK@5ZeqULxMb99nlIQOu/bVnBLlCt9b0/JDtyCF@NgaTlfRRBw4JtIBuf3O/1zB7Zhsj9tbEhMfdZUZa/" rel="nofollow noreferrer">disproved</a> evolution!!</p>
 <ul>
 <li>Using <code>@</code> in the target string allows me to use ASCII range 64-90</li>
 <li>Using <code>jot -c -r 28 64 90</code> is better than repeatedly doing <code>${(#)$((RANDOM%27+64))}</code></li>
-<li>Saved bytes by removing <code>&quot;&quot;</code>, squishing <code>jot</code> parameters to <code>-cr</code>, and using <code>?</code> to crash the script instead of <code>exit</code>ing properly</li>
+<li>Saved bytes by removing <code>&quot;&quot;</code>, squishing <code>jot</code> parameters to <code>-cr</code>, and using <code>?</code> to crash the script instead of <code>exit</code>ing properly, removing duplicate logic</li>
 </ul>
 </div>
 <div id="pu1" class="pu"><h1>Uiua, <s>142</s> <s>136</s> 131 bytes</h1>
