--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240902T014448Z
+"   /golfscore                                      20240902T015324Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/205.html">Slot Machine Hacker                             : 0000205</a>
 <a href="q/17294.html">Golfing A Weasel Program                        : 0017294</a>
 <a href="q/274690.html">Cubic Concatenation                             : 0274690</a>
 <a href="q/275291.html">How many ways can you make change?              : 0275291</a>
